Fixes to signup and create community modals on mobile

--- a/src/routes/CreateCommunity/CreateCommunity.scss
+++ b/src/routes/CreateCommunity/CreateCommunity.scss
@@ -255,7 +255,7 @@
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     flex: unset;
-    height: calc(100% - 190px);
+    height: calc(100% - 140px);
   }
 }
 
